--- a/.github/workflows/frontend.deploy.chromatic.yml
+++ b/.github/workflows/frontend.deploy.chromatic.yml
@@ -8,7 +8,8 @@ jobs:
     name: Chromatic - Frontend
     runs-on: ubuntu-latest
     env:
-      CHROMATIC_PROJECT_TOKEN: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
+      CHROMATIC_PROJECT_TOKEN: ${{ secrets.CHROMATIC_PROJECT_TOKEN_FRONTEND }}
+      WORKING_DIRECTORY: ./frontend
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -17,3 +18,4 @@ jobs:
 
       - name: Frontend | Build
         run: npm install && npm run chromatic -- --exit-zero-on-changes
+        working-directory: ${{env.WORKING_DIRECTORY}}
