--- a/.github/workflows/frontend.test.lint.code.yml
+++ b/.github/workflows/frontend.test.lint.code.yml
@@ -1,15 +1,15 @@
-name: "frontend:test:build test docs"
+name: "frontend:test:lint code with defined linters"
 
 on: push
 
 jobs:
   # only (but most important) job from this workflow required for pull requests
-  # check results serve as run conditions for all other jobs here
+  # check results serve as run conditions for all other jobs here 
   files-changed:
-    name: Detect File Changes - frontend-test-build-docs
+    name: Detect File Changes - frontend-test-lint-code
     runs-on: ubuntu-latest
     outputs:
-      changes: ${{ steps.changes.outputs.frontend-test-build-docs }}
+      changes: ${{ steps.changes.outputs.frontend-test-lint-code }}
     steps:
       - uses: actions/checkout@v4
 
@@ -21,14 +21,17 @@ jobs:
           filters: .github/file-filters.yml
           list-files: shell
 
-  build:
+  lint:
     if: needs.files-changed.outputs.changes == 'true'
-    name: Build Docs - Frontend
+    name: Lint - Frontend
     needs: files-changed
     runs-on: ubuntu-latest
+    env:
+      WORKING_DIRECTORY: ./frontend
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Frontend | Build Docs
-        run: npm install && npm run docs:build
+      - name: Frontend | Lint
+        run: npm install && npm run test:lint
+        working-directory: ${{env.WORKING_DIRECTORY}}
