--- a/.github/workflows/frontend.test.unit.code.yml
+++ b/.github/workflows/frontend.test.unit.code.yml
@@ -1,15 +1,15 @@
-name: "frontend:test:build test storybook"
+name: "frontend:test:unit test code with defined suites"
 
 on: push
 
 jobs:
   # only (but most important) job from this workflow required for pull requests
-  # check results serve as run conditions for all other jobs here
+  # check results serve as run conditions for all other jobs here 
   files-changed:
-    name: Detect File Changes - frontend-test-build-storybook
+    name: Detect File Changes - frontend-test-unit-code
     runs-on: ubuntu-latest
     outputs:
-      changes: ${{ steps.changes.outputs.frontend-test-build-storybook }}
+      changes: ${{ steps.changes.outputs.frontend-test-unit-code }}
     steps:
       - uses: actions/checkout@v4
 
@@ -21,14 +21,17 @@ jobs:
           filters: .github/file-filters.yml
           list-files: shell
 
-  storybook:
+  unit:
     if: needs.files-changed.outputs.changes == 'true'
-    name: Build Storybook - Frontend
+    name: Unit - Frontend
     needs: files-changed
     runs-on: ubuntu-latest
+    env:
+      WORKING_DIRECTORY: ./frontend
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Frontend | Build Storybook
-        run: npm install && npm run storybook:build
+      - name: Frontend | Unit
+        run: npm install && npm run test:unit
+        working-directory: ${{env.WORKING_DIRECTORY}}
