--- a/.github/workflows/test.lint.pr.yml
+++ b/.github/workflows/test.lint.pr.yml
@@ -31,6 +31,7 @@ jobs:
           scopes: |
             backend
             presenter
+            frontend
             docu
             docker
             release
