frontend docker setup, hmr port

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,23 @@ services:
     environment:
       - NODE_ENV=production
 
+  ########################################################
+  # FRONTEND #############################################
+  ########################################################
+  frontend:
+    # name the image so that it cannot be found in a DockerHub repository, otherwise it will not be built locally from the 'dockerfile' but pulled from there
+    image: dreammall/frontend:local-production
+    build:
+      context: ./frontend
+      target: production
+    networks:
+      - external-net
+      - internal-net
+    ports:
+      - 3001:3000
+    environment:
+      - NODE_ENV=production
+
   #######################################################
   # BACKEND #############################################
   #######################################################
