--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -69,6 +69,67 @@ services:
       # bind the local folder to the docker to allow live reload
       - ./presenter:/app
 
+  ########################################################
+  # FRONTEND #############################################
+  ########################################################
+  frontend:
+    # name the image so that it cannot be found in a DockerHub repository, otherwise it will not be built locally from the 'dockerfile' but pulled from there
+    image: dreammall/frontend:local-development
+    build:
+      target: development
+    ports:
+      # development server port
+      - 24679:24679
+    environment:
+      - NODE_ENV=development
+      - PORT_HMR=24679
+    volumes:
+      # This makes sure the docker container has its own node modules.
+      # Therefore it is possible to have a different node version on the host machine
+      #- frontend_node_modules:/app/node_modules
+      # bind the local folder to the docker to allow live reload
+      - ./frontend:/app
+
+  #######################################################
+  # FRONTEND STORYBOOK ##################################
+  #######################################################
+  frontend-storybook:
+    # name the image so that it cannot be found in a DockerHub repository, otherwise it will not be built locally from the 'dockerfile' but pulled from there
+    image: dreammall/frontend:local-storybook
+    build:
+      context: ./frontend
+      target: storybook
+    ports:
+      - 6007:6006
+    environment:
+      - NODE_ENV=development
+    volumes:
+      # This makes sure the docker container has its own node modules.
+      # Therefore it is possible to have a different node version on the host machine
+      #- frontend_storybook_node_modules:/app/node_modules
+      # bind the local folder to the docker to allow live reload
+      - ./frontend:/app
+
+  #######################################################
+  # FRONTEND DOCUMENTATION ##############################
+  #######################################################
+  frontend-documentation:
+    # name the image so that it cannot be found in a DockerHub repository, otherwise it will not be built locally from the 'dockerfile' but pulled from there
+    image: dreammall/frontend:local-documentation
+    build:
+      context: ./frontend
+      target: documentation
+    ports:
+      - 8082:8080
+    environment:
+      - NODE_ENV=development
+    volumes:
+      # This makes sure the docker container has its own node modules.
+      # Therefore it is possible to have a different node version on the host machine
+      #- frontend_documentation_node_modules:/app/node_modules
+      # bind the local folder to the docker to allow live reload
+      - ./frontend:/app
+
   #######################################################
   # BACKEND #############################################
   #######################################################
@@ -97,7 +158,7 @@ services:
       context: ./backend
       target: documentation
     ports:
-      - 8082:8080
+      - 8083:8080
     environment:
       - NODE_ENV=development
     volumes:
@@ -130,6 +191,9 @@ volumes:
   presenter_node_modules:
   presenter_storybook_node_modules:
   presenter_documentation_node_modules:
+  frontend_node_modules:
+  frontend_storybook_node_modules:
+  frontend_documentation_node_modules:
   backend_node_modules:
   backend_documentation_node_modules:
   documentation_node_modules:
