--- a/frontend/.env.dist
+++ b/frontend/.env.dist
@@ -1,3 +1,6 @@
+# Endpoints
+PUBLIC_ENV__ENDPOINTS__GRAPHQL_URI=http://localhost:4000/
+
 # META
 PUBLIC_ENV__META__BASE_URL="http://localhost:3000"
 PUBLIC_ENV__META__DEFAULT_AUTHOR="IT Team 4 Change"
