--- a/frontend/package.json
+++ b/frontend/package.json
@@ -87,6 +87,7 @@
     "vuetify": "^3.5.11"
   },
   "devDependencies": {
+    "@apollo/client": "^3.9.9",
     "@eslint-community/eslint-plugin-eslint-comments": "^4.1.0",
     "@intlify/eslint-plugin-vue-i18n": "^2.0.0",
     "@pinia/testing": "^0.1.3",
@@ -101,6 +102,8 @@
     "@typescript-eslint/eslint-plugin": "^7.3.1",
     "@typescript-eslint/parser": "^7.3.1",
     "@vitest/coverage-v8": "^1.4.0",
+    "@vue/apollo-composable": "^4.0.2",
+    "@vue/apollo-option": "^4.0.0",
     "@vue/test-utils": "^2.4.5",
     "@vuepress/bundler-vite": "^2.0.0-rc.8",
     "chromatic": "^11.2.0",
@@ -119,6 +122,7 @@
     "eslint-plugin-vuetify": "^2.2.0",
     "eslint-plugin-yml": "^1.13.2",
     "happy-dom": "^14.3.6",
+    "mock-apollo-client": "^1.2.1",
     "prettier": "^3.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
