--- a/frontend/.env.dist
+++ b/frontend/.env.dist
@@ -1,3 +1,15 @@
+# AUTH
+# PUBLIC_ENV__AUTH__AUTHORITY and PUBLIC_ENV__AUTH__AUTHORITY_SIGNUP_URI
+# are not default values since the default is to hide the signin/signup buttons
+PUBLIC_ENV__AUTH__AUTHORITY="http://localhost:9000/application/o/dreammallearth/"
+PUBLIC_ENV__AUTH__AUTHORITY_SIGNUP_URI="http://localhost:9000/if/flow/dreammallearth-enrollment/"
+PUBLIC_ENV__AUTH__AUTHORITY_SIGNOUT_URI="http://localhost:9000/if/flow/dreammallearth-invalidation-flow/"
+PUBLIC_ENV__AUTH__CLIENT_ID="G3g0sjCjph1NAyGeeu5Te5ltx1I7WZ0DGB8i6vOI"
+PUBLIC_ENV__AUTH__REDIRECT_URI="http://localhost:3001/auth"
+PUBLIC_ENV__AUTH__SILENT_REDIRECT_URI="http://localhost:3001/silent-refresh"
+PUBLIC_ENV__AUTH__RESPONSE_TYPE="code"
+PUBLIC_ENV__AUTH__SCOPE="openid profile posts"
+
 # Endpoints
 PUBLIC_ENV__ENDPOINTS__GRAPHQL_URI=http://localhost:4000/
 
