--- a/frontend/package.json
+++ b/frontend/package.json
@@ -61,18 +61,22 @@
     "update": "npx npm-check-updates"
   },
   "dependencies": {
+    "@apollo/client": "^3.9.9",
     "@intlify/unplugin-vue-i18n": "^3.0.1",
     "@mdi/font": "^7.4.47",
     "@types/compression": "^1.7.5",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.30",
     "@vitejs/plugin-vue": "^5.0.4",
+    "@vue/apollo-composable": "^4.0.2",
+    "@vue/apollo-option": "^4.0.0",
     "@vue/compiler-sfc": "^3.4.21",
     "@vue/server-renderer": "3.4.21",
     "@vuepress/theme-default": "^2.0.0-rc.18",
     "compression": "^1.7.4",
     "cross-env": "^7.0.3",
     "express": "^4.19.1",
+    "oidc-client-ts": "^3.0.1",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.1",
     "sass": "^1.72.0",
@@ -87,7 +91,6 @@
     "vuetify": "^3.5.11"
   },
   "devDependencies": {
-    "@apollo/client": "^3.9.9",
     "@eslint-community/eslint-plugin-eslint-comments": "^4.1.0",
     "@intlify/eslint-plugin-vue-i18n": "^2.0.0",
     "@pinia/testing": "^0.1.3",
@@ -102,8 +105,6 @@
     "@typescript-eslint/eslint-plugin": "^7.3.1",
     "@typescript-eslint/parser": "^7.3.1",
     "@vitest/coverage-v8": "^1.4.0",
-    "@vue/apollo-composable": "^4.0.2",
-    "@vue/apollo-option": "^4.0.0",
     "@vue/test-utils": "^2.4.5",
     "@vuepress/bundler-vite": "^2.0.0-rc.8",
     "chromatic": "^11.2.0",
@@ -155,6 +156,7 @@
     "#src/*": "./src/*",
     "#plugins/*": "./renderer/plugins/*",
     "#context/*": "./renderer/context/*",
+    "#tests/*": "./scripts/tests/*",
     "#types/*": "./types/*",
     "#root/*": "./*"
   }
