--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -19,6 +19,7 @@
       "#src/*": ["./src/*"],
       "#plugins/*": ["./renderer/plugins/*"],
       "#context/*": ["./renderer/context/*"],
+      "#tests/*": ["./scripts/tests/*"],
       "#types/*": ["./types/*"],
       "#root/*": ["./*"]
     }
