signin button in presenter redirects to signin page in frontend

--- a/presenter/.env.dist
+++ b/presenter/.env.dist
@@ -10,6 +10,8 @@ PUBLIC_ENV__AUTH__SILENT_REDIRECT_URI="http://localhost:3000/silent-refresh"
 PUBLIC_ENV__AUTH__RESPONSE_TYPE="code"
 PUBLIC_ENV__AUTH__SCOPE="openid profile posts"
 
+PUBLIC_ENV__SIGNIN_REDIRECT_URI="http://localhost:3001/signin"
+
 # Endpoints
 PUBLIC_ENV__ENDPOINTS__GRAPHQL_URI=http://localhost:4000/
 
