--- a/frontend/.env.dist
+++ b/frontend/.env.dist
@@ -16,6 +16,4 @@ PUBLIC_ENV__ENDPOINTS__GRAPHQL_URI=http://localhost:4000/
 
 # META
 PUBLIC_ENV__META__BASE_URL="http://localhost:3000"
-PUBLIC_ENV__META__DEFAULT_AUTHOR="IT Team 4 Change"
-PUBLIC_ENV__META__DEFAULT_DESCRIPTION="IT4C Frontend Boilerplate"
-PUBLIC_ENV__META__DEFAULT_TITLE="IT4C"
+PUBLIC_ENV__META__DEFAULT_AUTHOR="DreamMall Verlag GbR"
