--- a/deployment/nginx/default.conf
+++ b/deployment/nginx/default.conf
@@ -29,7 +29,7 @@ server {
       proxy_buffers      4 512k;
       proxy_buffer_size  256k;
 
-      proxy_pass         http://127.0.0.1:3000/;
+      proxy_pass         http://127.0.0.1:3000/app/;
       proxy_redirect     off;
 
       access_log /var/www/localhost/htdocs/dreammall.earth/log/nginx.access.frontend.log combined;
