ignore logger for coverage

--- a/backend/jest.config.json
+++ b/backend/jest.config.json
@@ -2,7 +2,15 @@
   "verbose": true,
   "preset": "ts-jest",
   "collectCoverage": true,
-  "collectCoverageFrom": ["src/**/*.ts", "!src/index.ts", "!src/logger.ts", "!src/prisma.ts", "!**/node_modules/**", "!build/**"],
+  "collectCoverageFrom": [
+    "src/**/*.ts",
+    "!src/index.ts",
+    "!src/logger.ts",
+    "!src/server/logger.ts",
+    "!src/prisma.ts",
+    "!**/node_modules/**",
+    "!build/**"
+  ],
   "coverageThreshold": {
     "global": {
       "statements": 100,
