unify names of AUTH

--- a/presenter/.env.dist
+++ b/presenter/.env.dist
@@ -1,6 +1,5 @@
 # AUTH
-PUBLIC_ENV__AUTH__AUTHORITY="http://localhost:9000/application/o/dreammallearth/"
-PUBLIC_ENV__AUTH__AUTHORITY_SIGNUP_URI="http://localhost:9000/if/flow/dreammallearth-enrollment/"
+PUBLIC_ENV__SIGNUP_URI="http://localhost:9000/if/flow/dreammallearth-enrollment/"
 PUBLIC_ENV__SIGNIN_REDIRECT_URI="http://localhost:3000/signin"
 
 # Endpoints
