--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -15,6 +15,7 @@
       "#pages/*": ["./src/pages/*"],
       "#assets/*": ["./src/assets/*"],
       "#layouts/*": ["./src/layouts/*"],
+      "#queries/*": ["./src/graphql/queries/*"],
       "#stores/*": ["./src/stores/*"],
       "#src/*": ["./src/*"],
       "#plugins/*": ["./renderer/plugins/*"],
