--- a/frontend/package.json
+++ b/frontend/package.json
@@ -74,8 +74,10 @@
     "@vue/server-renderer": "3.4.21",
     "@vuepress/theme-default": "^2.0.0-rc.24",
     "compression": "^1.7.4",
+    "cookie": "^0.6.0",
     "cross-env": "^7.0.3",
     "express": "^4.19.2",
+    "js-cookie": "^3.0.5",
     "oidc-client-ts": "^3.0.1",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.1",
@@ -102,6 +104,8 @@
     "@storybook/testing-library": "^0.2.2",
     "@storybook/vue3": "^8.0.6",
     "@storybook/vue3-vite": "^8.0.6",
+    "@types/cookie": "^0.6.0",
+    "@types/js-cookie": "^3.0.6",
     "@typescript-eslint/eslint-plugin": "^7.5.0",
     "@typescript-eslint/parser": "^7.5.0",
     "@vitest/coverage-v8": "^1.4.0",
