--- a/presenter/.env.dist
+++ b/presenter/.env.dist
@@ -1,6 +1,6 @@
 # AUTH
 PUBLIC_ENV__SIGNUP_URI="http://localhost:9000/if/flow/dreammallearth-enrollment/"
-PUBLIC_ENV__SIGNIN_REDIRECT_URI="http://localhost:3000/signin"
+PUBLIC_ENV__SIGNIN_URI="http://localhost:3000/signin"
 
 # Endpoints
 PUBLIC_ENV__ENDPOINTS__GRAPHQL_URI=http://localhost:4000/
