--- a/backend/.env.dist
+++ b/backend/.env.dist
@@ -7,4 +7,4 @@ BREVO_NEWSLETTER_TEMPLATE_OPTIN="3"
 BREVO_NEWSLETTER_LIST="3"
 DATABASE_URL="mysql://root:@localhost:3306/dreammall.earth"
 
-ROOM_LINK="http://bbb.dreammall.earth"
+ROOM_LINK="http://my-room.earth"
