--- a/backend/package.json
+++ b/backend/package.json
@@ -43,6 +43,7 @@
     "dotenv": "^16.4.5",
     "graphql": "^16.8.1",
     "graphql-scalars": "^1.23.0",
+    "jsonwebtoken": "^9.0.2",
     "prisma": "^5.12.1",
     "prisma-extension-soft-delete": "^1.0.1",
     "reflect-metadata": "^0.2.2",
@@ -53,6 +54,7 @@
   "devDependencies": {
     "@eslint-community/eslint-plugin-eslint-comments": "^4.2.0",
     "@types/jest": "^29.5.12",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.12.5",
     "@typescript-eslint/eslint-plugin": "^7.5.0",
     "@typescript-eslint/parser": "^7.5.0",
