--- a/authentik/flows/dreammallearth-enrollment.yaml
+++ b/authentik/flows/dreammallearth-enrollment.yaml
@@ -7,7 +7,7 @@ entries:
     layout: stacked
     name: dreammallearth-enrollment
     policy_engine_mode: any
-    title: Dreammall Signup
+    title: DreamMall Signup
   conditions: []
   id: null
   identifiers:
