--- a/authentik/flows/dreammallearth-enrollment-email.yaml
+++ b/authentik/flows/dreammallearth-enrollment-email.yaml
@@ -5,7 +5,7 @@ entries:
     compatibility_mode: true
     denied_action: message_continue
     designation: enrollment
-    layout: stacked
+    layout: sidebar-right
     name: dreammallearth-enrollment-email
     policy_engine_mode: any
     title: DreamMall Signup
