--- a/authentik/flows/dreammallearth-enrollment.yaml
+++ b/authentik/flows/dreammallearth-enrollment.yaml
@@ -4,7 +4,7 @@ entries:
     authentication: none
     denied_action: message_continue
     designation: enrollment
-    layout: stacked
+    layout: sidebar-right
     name: dreammallearth-enrollment
     policy_engine_mode: any
     title: DreamMall Signup
