--- a/authentik/flows/dreammallearth-invalidation-flow.yaml
+++ b/authentik/flows/dreammallearth-invalidation-flow.yaml
@@ -4,7 +4,7 @@ entries:
     authentication: none
     denied_action: message_continue
     designation: invalidation
-    layout: stacked
+    layout: sidebar-right
     name: dreammall.earth-invalidation-flow
     policy_engine_mode: any
     title: Logout
