--- a/authentik/flows/dreammallearth-enrollment-email.yaml
+++ b/authentik/flows/dreammallearth-enrollment-email.yaml
@@ -5,10 +5,10 @@ entries:
     compatibility_mode: true
     denied_action: message_continue
     designation: enrollment
-    layout: sidebar-right
+    layout: sidebar_right
     name: dreammallearth-enrollment-email
     policy_engine_mode: any
-    title: DreamMall Signup
+    title: Signup
   conditions: []
   id: null
   identifiers:
