update authentik flows

--- a/authentik/flows/dreammallearth-enrollment-email.yaml
+++ b/authentik/flows/dreammallearth-enrollment-email.yaml
@@ -8,7 +8,7 @@ entries:
     layout: sidebar_right
     name: dreammallearth-enrollment-email
     policy_engine_mode: any
-    title: Signup
+    title: Sign Up
   conditions: []
   id: null
   identifiers:
