--- a/authentik/flows/dreammallearth-authentication-flow.yaml
+++ b/authentik/flows/dreammallearth-authentication-flow.yaml
@@ -5,9 +5,9 @@ entries:
     denied_action: message_continue
     designation: authentication
     layout: sidebar_right
-    name: Welcome to DreamMall!
+    name: Welcome to DreamMall
     policy_engine_mode: any
-    title: Welcome to DreamMall!
+    title: Sign In
   conditions: []
   id: null
   identifiers:
