add custom css file to docker flow

--- a/authentik/docker-compose.yml
+++ b/authentik/docker-compose.yml
@@ -44,6 +44,7 @@ services:
       - ./media:/media
       - ./custom-templates:/templates
       - ./data:/data
+      - ./media/custom.css:/web/dist/custom.css
     env_file:
       - .env
     ports:
