--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,7 +1,7 @@
 version: 2
 updates:
 - package-ecosystem: "github-actions"
-  open-pull-requests-limit: 999
+  open-pull-requests-limit: 99
   directory: "/"
   rebase-strategy: "disabled"
   schedule:
@@ -10,7 +10,7 @@ updates:
     timezone: "Europe/Berlin"
     time: "03:00"
 - package-ecosystem: npm
-  open-pull-requests-limit: 999
+  open-pull-requests-limit: 99
   directory: "/"
   rebase-strategy: "disabled"
   schedule:
@@ -19,7 +19,7 @@ updates:
     timezone: "Europe/Berlin"
     time: "03:00"
 - package-ecosystem: docker
-  open-pull-requests-limit: 999
+  open-pull-requests-limit: 99
   directory: "/"
   rebase-strategy: "disabled"
   schedule:
@@ -30,7 +30,7 @@ updates:
 
 # presenter
 - package-ecosystem: npm
-  open-pull-requests-limit: 999
+  open-pull-requests-limit: 99
   directory: "/presenter"
   rebase-strategy: "disabled"
   schedule:
@@ -39,7 +39,7 @@ updates:
     timezone: "Europe/Berlin"
     time: "03:00"
 - package-ecosystem: docker
-  open-pull-requests-limit: 999
+  open-pull-requests-limit: 99
   directory: "/presenter"
   rebase-strategy: "disabled"
   schedule:
@@ -50,7 +50,7 @@ updates:
 
 # frontend
 - package-ecosystem: npm
-  open-pull-requests-limit: 999
+  open-pull-requests-limit: 99
   directory: "/frontend"
   rebase-strategy: "disabled"
   schedule:
@@ -59,7 +59,7 @@ updates:
     timezone: "Europe/Berlin"
     time: "03:00"
 - package-ecosystem: docker
-  open-pull-requests-limit: 999
+  open-pull-requests-limit: 99
   directory: "/frontend"
   rebase-strategy: "disabled"
   schedule:
@@ -70,7 +70,7 @@ updates:
 
 # backend
 - package-ecosystem: npm
-  open-pull-requests-limit: 999
+  open-pull-requests-limit: 99
   directory: "/backend"
   rebase-strategy: "disabled"
   schedule:
@@ -79,8 +79,19 @@ updates:
     timezone: "Europe/Berlin"
     time: "03:00"
 - package-ecosystem: docker
-  open-pull-requests-limit: 999
+  open-pull-requests-limit: 99
   directory: "/backend"
+  rebase-strategy: "disabled"
+  schedule:
+    interval: weekly
+    day: "saturday"
+    timezone: "Europe/Berlin"
+    time: "03:00"
+
+# e2e
+- package-ecosystem: npm
+  open-pull-requests-limit: 99
+  directory: "/cypress"
   rebase-strategy: "disabled"
   schedule:
     interval: weekly
