addmarkdown style value to remark config

--- a/presenter/.remarkrc.json
+++ b/presenter/.remarkrc.json
@@ -3,6 +3,10 @@
         "remark-gfm",
         "remark-preset-lint-consistent",
         "remark-preset-lint-markdown-style-guide",
+        [
+            "remark-preset-lint-markdown-style-guide",
+            "mixed"
+        ],
         "remark-preset-lint-recommended",
         [
             "remark-lint-maximum-line-length",
