--- a/.github/workflows/backend.test.unit.code.yml
+++ b/.github/workflows/backend.test.unit.code.yml
@@ -41,7 +41,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Backend | docker-compose database
-        run: ln -s ./src/auth/public.pem . && docker-compose -f docker-compose.yml up --detach --no-deps database
+        run: docker-compose -f docker-compose.yml up --detach --no-deps database
 
       - name: Backend | Unit
         run: npm install && npm run db:migrate && npm run test:unit
