lint pr scope admin

--- a/.github/workflows/test.lint.pr.yml
+++ b/.github/workflows/test.lint.pr.yml
@@ -32,6 +32,7 @@ jobs:
             backend
             presenter
             frontend
+            admin
             authentik
             docu
             docker
