--- a/.github/workflows/admin.deploy.chromatic.yml
+++ b/.github/workflows/admin.deploy.chromatic.yml
@@ -1,19 +1,20 @@
-name: "frontend:deploy:chromatic"
+name: "admin:deploy:chromatic"
 on:
   push:
     branches:
       - master
 jobs:
   build-and-deploy:
-    name: Chromatic - Frontend
+    name: Chromatic - Admin
     runs-on: ubuntu-latest
     env:
-      CHROMATIC_PROJECT_TOKEN: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
+      CHROMATIC_PROJECT_TOKEN: ${{ secrets.CHROMATIC_PROJECT_TOKEN_ADMIN }}
+      WORKING_DIRECTORY: ./admin
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      - name: Frontend | Build
+      - name: Admin | Build
         run: npm install && npm run chromatic -- --exit-zero-on-changes
