--- a/.github/workflows/admin.test.build.code.yml
+++ b/.github/workflows/admin.test.build.code.yml
@@ -1,4 +1,4 @@
-name: "frontend:test:build test storybook"
+name: "admin:test:build test code"
 
 on: push
 
@@ -6,14 +6,14 @@ jobs:
   # only (but most important) job from this workflow required for pull requests
   # check results serve as run conditions for all other jobs here
   files-changed:
-    name: Detect File Changes - frontend-test-build-storybook
+    name: Detect File Changes - admin-test-build-code
     runs-on: ubuntu-latest
     outputs:
-      changes: ${{ steps.changes.outputs.frontend-test-build-storybook }}
+      changes: ${{ steps.changes.outputs.admin-test-build-code }}
     steps:
       - uses: actions/checkout@v4
 
-      - name: Check for frontend file changes
+      - name: Check for admin file changes
         uses: dorny/paths-filter@v3.0.2
         id: changes
         with:
@@ -21,14 +21,16 @@ jobs:
           filters: .github/file-filters.yml
           list-files: shell
 
-  storybook:
+  build:
     if: needs.files-changed.outputs.changes == 'true'
-    name: Build Storybook - Frontend
+    name: Build - Admin
     needs: files-changed
     runs-on: ubuntu-latest
+    env:
+      WORKING_DIRECTORY: ./admin
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Frontend | Build Storybook
-        run: npm install && npm run storybook:build
+      - name: Admin | Build
+        run: npm install && npm run build
