--- a/.github/workflows/admin.test.unit.code.yml
+++ b/.github/workflows/admin.test.unit.code.yml
@@ -1,19 +1,19 @@
-name: "frontend:test:build test code"
+name: "admin:test:unit test code with defined suites"
 
 on: push
 
 jobs:
   # only (but most important) job from this workflow required for pull requests
-  # check results serve as run conditions for all other jobs here
+  # check results serve as run conditions for all other jobs here 
   files-changed:
-    name: Detect File Changes - frontend-test-build-code
+    name: Detect File Changes - admin-test-unit-code
     runs-on: ubuntu-latest
     outputs:
-      changes: ${{ steps.changes.outputs.frontend-test-build-code }}
+      changes: ${{ steps.changes.outputs.admin-test-unit-code }}
     steps:
       - uses: actions/checkout@v4
 
-      - name: Check for frontend file changes
+      - name: Check for admin file changes
         uses: dorny/paths-filter@v3.0.2
         id: changes
         with:
@@ -21,14 +21,16 @@ jobs:
           filters: .github/file-filters.yml
           list-files: shell
 
-  build:
+  unit:
     if: needs.files-changed.outputs.changes == 'true'
-    name: Build - Frontend
+    name: Unit - Admin
     needs: files-changed
     runs-on: ubuntu-latest
+    env:
+      WORKING_DIRECTORY: ./admin
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Frontend | Build
-        run: npm install && npm run build
+      - name: Admin | Unit
+        run: npm install && npm run test:unit
