--- a/.github/workflows/admin.test.build.docker.yml
+++ b/.github/workflows/admin.test.build.docker.yml
@@ -1,4 +1,4 @@
-name: "frontend:test:build test docker"
+name: "admin:test:build test docker"
 
 on: push
 
@@ -6,14 +6,14 @@ jobs:
   # only (but most important) job from this workflow required for pull requests
   # check results serve as run conditions for all other jobs here
   files-changed:
-    name: Detect File Changes - frontend-test-build-docker
+    name: Detect File Changes - admin-test-build-docker
     runs-on: ubuntu-latest
     outputs:
-      changes: ${{ steps.changes.outputs.frontend-test-build-docker }}
+      changes: ${{ steps.changes.outputs.admin-test-build-docker }}
     steps:
       - uses: actions/checkout@v4
 
-      - name: Check for frontend file changes
+      - name: Check for admin file changes
         uses: dorny/paths-filter@v3.0.2
         id: changes
         with:
@@ -23,24 +23,28 @@ jobs:
 
   build-production:
     if: needs.files-changed.outputs.changes == 'true'
-    name: Build Docker Production - Frontend
+    name: Build Docker Production - Admin
     needs: files-changed
     runs-on: ubuntu-latest
+    env:
+      WORKING_DIRECTORY: ./admin
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Frontend | Build Docker Production
+      - name: Admin | Build Docker Production
         run: docker compose -f docker-compose.yml build
 
   build-development:
     if: needs.files-changed.outputs.changes == 'true'
-    name: Build Docker Development - Frontend
+    name: Build Docker Development - Admin
     needs: files-changed
     runs-on: ubuntu-latest
+    env:
+      WORKING_DIRECTORY: ./admin
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Frontend | Build Docker Development
+      - name: Admin | Build Docker Development
         run: docker compose build
