--- a/.github/workflows/admin.test.build.storybook.yml
+++ b/.github/workflows/admin.test.build.storybook.yml
@@ -1,19 +1,19 @@
-name: "frontend:test:unit test code with defined suites"
+name: "admin:test:build test storybook"
 
 on: push
 
 jobs:
   # only (but most important) job from this workflow required for pull requests
-  # check results serve as run conditions for all other jobs here 
+  # check results serve as run conditions for all other jobs here
   files-changed:
-    name: Detect File Changes - frontend-test-unit-code
+    name: Detect File Changes - admin-test-build-storybook
     runs-on: ubuntu-latest
     outputs:
-      changes: ${{ steps.changes.outputs.frontend-test-unit-code }}
+      changes: ${{ steps.changes.outputs.admin-test-build-storybook }}
     steps:
       - uses: actions/checkout@v4
 
-      - name: Check for frontend file changes
+      - name: Check for admin file changes
         uses: dorny/paths-filter@v3.0.2
         id: changes
         with:
@@ -21,14 +21,16 @@ jobs:
           filters: .github/file-filters.yml
           list-files: shell
 
-  unit:
+  storybook:
     if: needs.files-changed.outputs.changes == 'true'
-    name: Unit - Frontend
+    name: Build Storybook - Admin
     needs: files-changed
     runs-on: ubuntu-latest
+    env:
+      WORKING_DIRECTORY: ./admin
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Frontend | Unit
-        run: npm install && npm run test:unit
+      - name: Admin | Build Storybook
+        run: npm install && npm run storybook:build
