--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -130,6 +130,67 @@ services:
       # bind the local folder to the docker to allow live reload
       - ./frontend:/app
 
+  ########################################################
+  # ADMIN ################################################
+  ########################################################
+  admin:
+    # name the image so that it cannot be found in a DockerHub repository, otherwise it will not be built locally from the 'dockerfile' but pulled from there
+    image: dreammall/admin:local-development
+    build:
+      target: development
+    ports:
+      # development server port
+      - 24680:24680
+    environment:
+      - NODE_ENV=development
+      - PORT_HMR=24680
+    volumes:
+      # This makes sure the docker container has its own node modules.
+      # Therefore it is possible to have a different node version on the host machine
+      #- admin_node_modules:/app/node_modules
+      # bind the local folder to the docker to allow live reload
+      - ./admin:/app
+
+  #######################################################
+  # ADMIN STORYBOOK #####################################
+  #######################################################
+  admin-storybook:
+    # name the image so that it cannot be found in a DockerHub repository, otherwise it will not be built locally from the 'dockerfile' but pulled from there
+    image: dreammall/admin:local-storybook
+    build:
+      context: ./admin
+      target: storybook
+    ports:
+      - 6008:6006
+    environment:
+      - NODE_ENV=development
+    volumes:
+      # This makes sure the docker container has its own node modules.
+      # Therefore it is possible to have a different node version on the host machine
+      #- admin_storybook_node_modules:/app/node_modules
+      # bind the local folder to the docker to allow live reload
+      - ./admin:/app
+
+  #######################################################
+  # ADMIN DOCUMENTATION #################################
+  #######################################################
+  admin-documentation:
+    # name the image so that it cannot be found in a DockerHub repository, otherwise it will not be built locally from the 'dockerfile' but pulled from there
+    image: dreammall/admin:local-documentation
+    build:
+      context: ./admin
+      target: documentation
+    ports:
+      - 8083:8080
+    environment:
+      - NODE_ENV=development
+    volumes:
+      # This makes sure the docker container has its own node modules.
+      # Therefore it is possible to have a different node version on the host machine
+      #- admin_documentation_node_modules:/app/node_modules
+      # bind the local folder to the docker to allow live reload
+      - ./admin:/app
+
   #######################################################
   # BACKEND #############################################
   #######################################################
@@ -158,7 +219,7 @@ services:
       context: ./backend
       target: documentation
     ports:
-      - 8083:8080
+      - 8084:8080
     environment:
       - NODE_ENV=development
     volumes:
@@ -194,6 +255,9 @@ volumes:
   frontend_node_modules:
   frontend_storybook_node_modules:
   frontend_documentation_node_modules:
+  admin_node_modules:
+  admin_storybook_node_modules:
+  admin_documentation_node_modules:
   backend_node_modules:
   backend_documentation_node_modules:
   documentation_node_modules:
