missing working directory

--- a/.github/workflows/admin.test.build.docker.yml
+++ b/.github/workflows/admin.test.build.docker.yml
@@ -48,3 +48,4 @@ jobs:
 
       - name: Admin | Build Docker Development
         run: docker compose build
+        working-directory: ${{env.WORKING_DIRECTORY}}
