--- a/.github/workflows/admin.test.build.code.yml
+++ b/.github/workflows/admin.test.build.code.yml
@@ -34,3 +34,4 @@ jobs:
 
       - name: Admin | Build
         run: npm install && npm run build
+        working-directory: ${{env.WORKING_DIRECTORY}}
