--- a/.github/workflows/admin.test.build.docs.yml
+++ b/.github/workflows/admin.test.build.docs.yml
@@ -34,3 +34,4 @@ jobs:
 
       - name: Admin | Build Docs
         run: npm install && npm run docs:build
+        working-directory: ${{env.WORKING_DIRECTORY}}
