--- a/.github/workflows/admin.test.lint.code.yml
+++ b/.github/workflows/admin.test.lint.code.yml
@@ -34,3 +34,4 @@ jobs:
 
       - name: Admin | Lint
         run: npm install && npm run test:lint
+        working-directory: ${{env.WORKING_DIRECTORY}}
