--- a/backend/package.json
+++ b/backend/package.json
@@ -36,28 +36,28 @@
   },
   "dependencies": {
     "@apollo/server": "^4.10.4",
-    "@getbrevo/brevo": "^2.0.0-beta.4",
-    "@prisma/client": "^5.12.1",
+    "@getbrevo/brevo": "^2.1.0",
+    "@prisma/client": "^5.13.0",
     "@vuepress/theme-default": "^2.0.0-rc.25",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
     "graphql": "^16.8.1",
     "graphql-scalars": "^1.23.0",
     "jsonwebtoken": "^9.0.2",
-    "prisma": "^5.12.1",
+    "prisma": "^5.13.0",
     "prisma-extension-soft-delete": "^1.0.1",
     "reflect-metadata": "^0.2.2",
     "tsconfig-paths": "^4.2.0",
     "tslog": "^4.9.2",
-    "type-graphql": "^2.0.0-beta.6"
+    "type-graphql": "^2.0.0-rc.1"
   },
   "devDependencies": {
     "@eslint-community/eslint-plugin-eslint-comments": "^4.3.0",
     "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.12.7",
-    "@typescript-eslint/eslint-plugin": "^7.7.0",
-    "@typescript-eslint/parser": "^7.7.0",
+    "@typescript-eslint/eslint-plugin": "^7.7.1",
+    "@typescript-eslint/parser": "^7.7.1",
     "@vuepress/bundler-vite": "^2.0.0-rc.9",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
