--- a/presenter/package.json
+++ b/presenter/package.json
@@ -104,6 +104,7 @@
     "@storybook/testing-library": "^0.2.2",
     "@storybook/vue3": "^8.0.9",
     "@storybook/vue3-vite": "^8.0.9",
+    "@types/validator": "^13.11.9",
     "@typescript-eslint/eslint-plugin": "^7.7.1",
     "@typescript-eslint/parser": "^7.7.1",
     "@vitest/coverage-v8": "^1.5.2",
