--- a/backend/.env.dist
+++ b/backend/.env.dist
@@ -8,3 +8,5 @@ BREVO_NEWSLETTER_LIST="3"
 DATABASE_URL="mysql://root:@localhost:3306/dreammall.earth"
 
 ROOM_LINK="http://my-room.earth"
+
+BBB_SHARED_SECRET=""
