--- a/backend/package.json
+++ b/backend/package.json
@@ -39,6 +39,7 @@
     "@getbrevo/brevo": "^2.1.0",
     "@prisma/client": "^5.13.0",
     "@vuepress/theme-default": "^2.0.0-rc.26",
+    "axios": "^1.6.8",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
     "graphql": "^16.8.1",
