add package cypress-network-idle for e2e testing

--- a/cypress/package.json
+++ b/cypress/package.json
@@ -39,7 +39,8 @@
     "@typescript-eslint/eslint-plugin": "^7.6.0",
     "@typescript-eslint/parser": "^7.6.0",
     "@vuepress/bundler-vite": "^2.0.0-rc.9",
-    "cypress": "^13.7.2",
+    "cypress": "^13.8.1",
+    "cypress-network-idle": "^1.14.2",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
