adapt e2e workflow to dreammall setup

--- a/.github/workflows/e2e.run.tests.yml
+++ b/.github/workflows/e2e.run.tests.yml
@@ -20,7 +20,7 @@ jobs:
 
       - name: E2E | Boot up test system
         run: |
-          docker-compose up --detach frontend
+          docker-compose -f docker-compose.yml -f docker-compose.override.ymlup --detach frontend
           cd authentik/
           ./database.unpack.sh
           docker compose up --detach
