--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
   },
   "devDependencies": {
     "@vuepress/bundler-vite": "^2.0.0-rc.8",
+    "cypress": "^13.8.1",
+    "cypress-network-idle": "^1.14.2",
     "remark-cli": "^12.0.0",
     "remark-gfm": "^4.0.0",
     "remark-preset-lint-consistent": "^5.1.2",
