--- a/.github/workflows/e2e.run.tests.yml
+++ b/.github/workflows/e2e.run.tests.yml
@@ -29,12 +29,14 @@ jobs:
       - name: E2E | Run all tests
         id: e2e-run
         uses: cypress-io/github-action@v6
+        working-directory: cypress
 
       - name: E2E | if tests failed, compile html report
         if: ${{ failure() && steps.e2e-run.conclusion == 'failure' }}
         run: |
-          cd cypress/cypress
+          cd cypress/
           npx tsx create-cucumber-html-report.ts
+        working-directory: cypress
 
       - name: Get PR number
         if: ${{ failure() && steps.e2e-run.conclusion == 'failure' }}
