--- a/.github/workflows/e2e.run.tests.yml
+++ b/.github/workflows/e2e.run.tests.yml
@@ -29,7 +29,8 @@ jobs:
       - name: E2E | Run all tests
         id: e2e-run
         uses: cypress-io/github-action@v6
-        working-directory: cypress
+        with:
+          working-directory: cypress
 
       - name: E2E | if tests failed, compile html report
         if: ${{ failure() && steps.e2e-run.conclusion == 'failure' }}
