--- a/.github/workflows/e2e.run.tests.yml
+++ b/.github/workflows/e2e.run.tests.yml
@@ -20,11 +20,11 @@ jobs:
 
       - name: E2E | Boot up test system
         run: |
-          docker compose up --detach frontend
+          docker compose -f docker-compose.yml up --detach frontend
           cd authentik/
           ./database.unpack.sh
           docker compose -f docker-compose.yml up --detach
-          sleep 15m
+          sleep 3m
 
       - name: E2E | Run all tests
         id: e2e-run
