--- a/.github/workflows/e2e.run.tests.yml
+++ b/.github/workflows/e2e.run.tests.yml
@@ -13,18 +13,19 @@ jobs:
       - name: Set Node version
         uses: actions/setup-node@v4
         with:
-          node-version: '>=21'
+          node-version: 21
 
       - name: Checkout
         uses: actions/checkout@master
 
       - name: E2E | Boot up test system
         run: |
-          docker compose -f docker-compose.yml up --detach frontend
           cd authentik/
           ./database.unpack.sh
           docker compose -f docker-compose.yml up --detach
-          sleep 6m
+          cd ../frontend
+          npm run build && npm run server:prod
+          sleep 5m
 
       - name: E2E | Run all tests
         id: e2e-run
