--- a/.github/workflows/e2e.run.tests.yml
+++ b/.github/workflows/e2e.run.tests.yml
@@ -24,7 +24,7 @@ jobs:
           ./database.unpack.sh
           docker compose -f docker-compose.yml up --detach
           cd ../frontend
-          npm run build && npm run server:prod
+          npm install && npm run build && npm run server:prod
           sleep 5m
 
       - name: E2E | Run all tests
