--- a/.github/workflows/e2e.run.tests.yml
+++ b/.github/workflows/e2e.run.tests.yml
@@ -20,9 +20,8 @@ jobs:
 
       - name: E2E | Boot up test system
         run: |
-          cd authentik/
-          ./database.unpack.sh
-          docker compose up
+          cd frontend
+          docker compose up frontend
 
       # - name: E2E | Run all tests
       #   id: e2e-run
