--- a/.github/workflows/e2e.run.tests.yml
+++ b/.github/workflows/e2e.run.tests.yml
@@ -22,9 +22,9 @@ jobs:
         run: |
           cd authentik/
           ./database.unpack.sh
-          docker compose up
+          docker compose up -d
           cd ../frontend
-          docker compose up frontend
+          docker compose up -d frontend 
           sleep 10m
 
       - name: E2E | Run all tests
