--- a/frontend/docker-compose.test.yml
+++ b/frontend/docker-compose.test.yml
@@ -7,15 +7,9 @@ services:
   frontend:
     image: it4c/frontend:local-test
     build:
-      target: production
+      target: test
     environment:
       - NODE_ENV=production
-    volumes:
-      # This makes sure the docker container has its own node modules.
-      # Therefore it is possible to have a different node version on the host machine
-      - frontend_node_modules:/app/node_modules
-      # bind the local folder to the docker to allow live reload
-      - ./:/app
 
 volumes:
   frontend_node_modules:
