--- a/.github/workflows/e2e.run.tests.yml
+++ b/.github/workflows/e2e.run.tests.yml
@@ -20,13 +20,12 @@ jobs:
 
       - name: E2E | Boot up test system
         run: |
-          sudo apt install htop
           cd authentik/
           ./database.unpack.sh
           docker compose up -d
           cd ../frontend
           docker compose -f docker-compose.yml -f docker-compose.test.yml up -d frontend
-          htop
+          sleep 10m
 
       - name: E2E | Run all tests
         id: e2e-run
