Revert "Merge pull request #790 from dreammall-earth/revert-788-bbb-api"
This reverts commit 3950d37272869f926a89c0b4e54120fc6548ba8b, reversing
changes made to 0e706b2068b94de3905d4dfc9d7f0cd75dc5c519.

--- a/backend/.env.dist
+++ b/backend/.env.dist
@@ -7,4 +7,5 @@ BREVO_NEWSLETTER_TEMPLATE_OPTIN="3"
 BREVO_NEWSLETTER_LIST="3"
 DATABASE_URL="mysql://root:@localhost:3306/dreammall.earth"
 
-ROOM_LINK="http://my-room.earth"
+BBB_SHARED_SECRET=""
+BBB_URL=""
