--- a/frontend/package.json
+++ b/frontend/package.json
@@ -91,6 +91,7 @@
     "vite": "^5.2.11",
     "vite-svg-loader": "^5.1.0",
     "vue": "3.4.26",
+    "vue-bind-once": "^0.2.1",
     "vue-i18n": "^9.13.1",
     "vuetify": "^3.5.17"
   },
