Move custom.css to repository where we want it in the docker.

--- a/authentik/docker-compose.yml
+++ b/authentik/docker-compose.yml
@@ -44,7 +44,7 @@ services:
       - ./media:/media
       - ./custom-templates:/templates
       - ./data:/data
-      - ./custom.css:/web/dist/custom.css
+      - ./web/dist/custom.css:/web/dist/custom.css
     env_file:
       - .env
     ports:
