add groups to dependabot for backend packages

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -98,6 +98,26 @@ updates:
     day: "saturday"
     timezone: "Europe/Berlin"
     time: "03:00"
+  groups:
+    eslint:
+      applies-to: version-updates
+      patterns:
+        - "*eslint*"
+      exclude-patterns:
+        - "eslint-plugin-n"
+        - "eslint"
+    prisma:
+      applies-to: version-updates
+      patterns:
+        - "*prisma*"
+    remark:
+      applies-to: version-updates
+      patterns:
+        - "remark*"
+    vuepress:
+      applies-to: version-updates
+      patterns:
+        - "*vuepress*"
 - package-ecosystem: docker
   open-pull-requests-limit: 999
   directory: "/backend"
