Remove vue-bind-once since we don't need it anymore

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,7 @@
     "dev": "npm run server:dev",
     "prod": "npm run build && npm run server:prod",
     "build": "vite build  && npm run server:build",
+    "lintfix": "npm run test:lint:eslint -- --fix",
     "server": "node --loader ts-node/esm ./server/index.ts",
     "server:dev": "npm run server",
     "server:prod": "cross-env NODE_ENV=production node ./build/index.cjs",
@@ -91,7 +92,6 @@
     "vite": "^5.2.11",
     "vite-svg-loader": "^5.1.0",
     "vue": "3.4.27",
-    "vue-bind-once": "^0.2.1",
     "vue-i18n": "^9.13.1",
     "vuetify": "^3.5.17"
   },
