--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,7 +38,7 @@
     "dev": "npm run server:dev",
     "prod": "npm run build && npm run server:prod",
     "build": "vite build  && npm run server:build",
-    "lintfix": "npm run test:lint:eslint -- --fix",
+    "lintfix": "npm run test:lint:eslint -- --fix && npm run test:lint:style -- --fix && npm run test:lint:locales -- --fix",
     "server": "node --loader ts-node/esm ./server/index.ts",
     "server:dev": "npm run server",
     "server:prod": "cross-env NODE_ENV=production node ./build/index.cjs",
