Add test: scope to lintfix command

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,7 +38,6 @@
     "dev": "npm run server:dev",
     "prod": "npm run build && npm run server:prod",
     "build": "vite build  && npm run server:build",
-    "lintfix": "npm run test:lint:eslint -- --fix && npm run test:lint:style -- --fix && npm run test:lint:locales -- --fix",
     "server": "node --loader ts-node/esm ./server/index.ts",
     "server:dev": "npm run server",
     "server:prod": "cross-env NODE_ENV=production node ./build/index.cjs",
@@ -48,6 +47,7 @@
     "storybook:build": "storybook build -o build/storybook",
     "storybook:test": "test-storybook",
     "test:lint": "npm run test:lint:eslint && npm run test:lint:remark && npm run test:lint:style && npm run test:lint:locales",
+    "test:lintfix": "npm run test:lint:eslint -- --fix && npm run test:lint:style -- --fix && npm run test:lint:locales -- --fix",
     "test:lint:eslint": "eslint --ext .vue,.ts,.tsx,.js,.jsx,.cjs,.mjs,.json,.yml,.yaml --max-warnings 0 .",
     "test:lint:locales": "scripts/locales/locales.sh src/locales",
     "test:lint:remark": "remark . --quiet --frail",
